@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.324 2006/03/08 09:43:10 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.325 2006/03/08 10:49:18 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -290,6 +290,11 @@ JJ/07 exipick: added --freeze and --thaw options to allow faster interaction
 JJ/08 exipick: added ! as generic prefix to negate any criteria format
 
 JJ/09 exipick: miscellaneous performance enhancements (~24% improvements)
+
+PH/57 Tidies in SMTP dialogue display in debug output: (i) It was not showing
+      responses to authentication challenges, though it was showing the
+      challenges; (ii) I've removed the CR characters from the debug output for
+      SMTP output lines.
 
 
 Exim version 4.60
